--- a/kubernetesdeploy.yaml
+++ b/kubernetesdeploy.yaml
@@ -1,34 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: Healthcareapp-deploy
+  name: healthcareapp-deploy
   labels:
-    app: Healthcare-app
+    app: healthcare-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: Healthcare-app
+      app: healthcare-app
   template:
     metadata:
       labels:
-        app: Healthcare-app
+        app: healthcare-app
     spec:
       containers:
-      - name: Healthcareapp-container
-        image: balajiveligaram/Healthcare-app
+      - name: healthcareapp-container
+        image: balajiveligaram/healthcare-app
         ports:
         - containerPort: 8082
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: Healthcareapp-np-service
+  name: healthcareapp-np-service
   labels:
-    app: Healthcare-app
+    app: healthcare-app
 spec:
   selector:
-    app: Healthcare-app
+    app: healthcare-app
 
   type: NodePort
   ports:
